--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fpccalculators",
+  "name": "@ceofyeast/prodchaincalculators",
   "version": "1.0.0",
   "description": "Contains modules used to generate, modify, and parse production chains",
   "type": "module",
