--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "name": "@ceofyeast/prodchaincalculators",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Contains modules used to generate, modify, and parse production chains",
   "type": "module",
-  "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
-  },
   "author": "ceofyeast",
   "license": "ISC",
   "exports": {
     "./irptu": "./scripts/prod-chain-irptu.module.js",
-    "./utility": "./scripts/prod-chain-utility.module.js"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0"
-  },
-  "dependencies": {
-    "node": "^20.19.0"
+    "./utility": "./scripts/prod-chain-utility.module.js",
+    "./config": "./scripts/config.module.js",
+    "./recipes": "./scripts/recipes.module.js",
+    "./calculators": "./scripts/irptu-calculators.module.js"
   }
 }
